# new-trump-game

./: .gitmodules  Cards.hs  Html5.hs  JQuery.hs  LICENSE  Main.hs  Makefile  README.md  StrictPerch.hs  board-trump.cabal  board-trump.css  board-trump.css.map  board-trump.sass  gettimeofday.js  index.htm  index.html  main.hs  main.js  new-trump-game.cabal  new-trump-game.css  new-trump-game.css.map  new-trump-game.htm  new-trump-game.js  new-trump-game.sass
Data/List/: Zipper.hs
Game/: BoardTrump.hs
Game/BoardTrump/: CPU.hs  Cards.hs  Core.hs  GameState.hs  Player.hs  Types.hs  Util.hs
NewTrumpGame/: Cards.hs  GameState.hs  Player.hs  Util.hs
umi/: README.md  bootstrap.html
umi/css/: bootstrap.css
