Name:                new-trump-game
Version:             0.1
Description:         A Haste game
Homepage:            https://github.com/ayu-mushi/new-trump-game
License:             MIT
License-file:        LICENSE
Author:              ayu-mushi
Maintainer:          ayu-mushi
Copyright:           Copyright (c) 2015 ayu-mushi.
Category:            Haste, Game
Build-type:          Simple
Cabal-version:       >= 1.18

source-repository head
    type:     git
    location: git@github.com:ayu-mushi/new-trump-game

Flag haste
    description: build with haste-compiler
    default: False

Library
    default-language: Haskell2010
    hs-source-dirs: .
    --other-modules: 
    exposed-modules: Game.BoardTrump.Cards, Game.BoardTrump.Core, Game.BoardTrump.Player, Game.BoardTrump.Util, Game.BoardTrump.CPU

    build-depends: base ==4.*, haste-lib >=0.1, transformers, haste-perch, random-shuffle, mtl, lens-family, random

Executable new-trump-game 
    default-language: Haskell2010
    Main-Is: main.hs
    hs-source-dirs: .
    build-depends:
      base == 4.*,
      haste-lib >= 0.1,
      new-trump-game
    if !flag(haste)
      buildable: False
