Name:                new-trump-game
Version:             0.1
--Description:
Homepage:            https://github.com/ayu-mushi/new-trump-game
License:             MIT
License-file:        LICENSE
Author:              ayu-mushi
Maintainer:          ayu-mushi
Copyright:           Copyright (c) 2015 ayu-mushi.
Category:            Haste, Game
Build-type:          Simple
Cabal-version:       >= 1.18

source-repository head
    type:     git
    location: 

Flag haste
    description: build with haste-compiler
    default: False

Library
    default-language: Haskell2010
    hs-source-dirs: .
    --other-modules: 
    exposed-modules: NewTrumpGame.Cards, NewTrumpGame.GameState, Control.Lens

    build-depends: base ==4.*, haste-lib >=0.1, transformers, haste-perch, random-shuffle, mtl

    ghc-options: -Wall

Executable new-trump-game 
    default-language: Haskell2010
    Main-Is: main.hs
    hs-source-dirs: .

    if !flag(haste)
        buildable: False

    if flag(haste)
        build-depends:
            base == 4.*,
            haste-lib >= 0.1

    ghc-options: -Wall
